test/js/node/test/parallel/test-stream-transform-callback-twice.js.log.txt
738 |     }
739 |     const error = args.pop();
740 |     // The error message should be non-enumerable
741 |     assert.strictEqual(Object.prototype.propertyIsEnumerable.call(error, 'message'), false);
742 | 
743 |     assert.throws(() => { throw error; }, validator);
                 ^
AssertionError: Expected values to be strictly deep-equal:
+ actual - expected

  {
    code: 'ERR_MULTIPLE_CALLBACK',
+   message: 'state',
+   name: 'TypeError'
-   message: 'Callback called multiple times',
-   name: 'Error'
  }
 code: "ERR_ASSERTION"

      at /Users/bun/code/bun/test/js/node/test/common/index.js:743:12
      at emitError (node:events:47:19)
      at emitErrorNT (internal:streams/destroy:125:21)
      at emitErrorCloseNT (internal:streams/destroy:108:26)
      at processTicksAndRejections (native:7:39)

Bun v1.1.34-debug+b186f0ba7 (macOS arm64)
